# backtesting

./: .gitignore  pyproject.toml
src/backtesting/: __init__.py  _plotting.py  _stats.py  _util.py  backtesting.py  lib.py
src/backtesting/test/: __init__.py  __main__.py  _test.py
